# warcex

./: .gitignore  .readthedocs.yaml  DEVELOPMENT.md  README.md  mkdocs.yml  pyproject.toml  requirements-mkdocs.txt
docs/: index.md  plugins.md
docs/stylesheets/: extra.css
src/warcex/: cli.py  data.py  plugmanager.py  processor.py  wacz.py
src/warcex/plugins/: facebook_groups.py
src/warcex/plugins/agpl/: facebook_groups.py
src/warcex/plugins/core/: LICENSE
