[tool.poetry]
name = "warcex"
version = "0.2.0"
description = "An extensible command line tool for extracting data from WARCZ files"
authors = ["Mat Bettinson <mat.bettinson@qut.edu.au>"]
readme = "README.md"
packages = [{include = "warcex", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.2"
pyfiglet = "^1.0.2"
warcio = "^1.7.5"
colorama = "^0.4.6"
beautifulsoup4 = "^4.13.3"

[tool.poetry.group.dev.dependencies]
bump-my-version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
warcex = "warcex.cli:run_main"

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/warcex/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
